1998-06-04  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* eventedit.c (ee_rp_init_rule): Do not subtract 1 from
	tm->tm_mday for the default_day.

	* gnome-cal.c (gnome_calendar_new): 
	(gnome_calendar_goto): Use the start of the day -- things expect
	it to be that way.

1998-05-27  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* eventedit.c (ee_store_recur_rule_to_ical): Fill in
	ical->recur->interval from value in spin_button. This ixed an
	infinnite loop.

1998-05-30  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-full-day.c (child_draw): Paint the decorations correctly.
	(child_draw_decor): Paint the recurrence/bell icons correctly.

1998-05-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* eventedit.c (ee_rp_init_rule): Use the contents of
	ee->ical->dtstart for computing the predefined values of the recurrence.

	* gncal-full-day.c (gncal_full_day_unrealize): Fix the gc
	destruction in the unrealization code and fix the pixmap unrefing.

	* main.c (close_cmd): Remove a bad hack that disabled calendar
	widget destruction.

	* calobj.c (ical_object_generate_events): Fix for the weekly event
	generation.  Was reported on the bug tracking system. 

1998-05-18  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-full-day.c (layout_children): Implemented ultra-cool
	layout for the events that share the same time range.  Gals and
	guys you can now drop Outlook on the recycle bin.  

	Which reminds me.  We do not have a recycle bin.  How could that
	happen in a project as cool as this one?  Someone explain this to
	me. 

1998-05-18  Federico Mena  <federico@nuclecu.unam.mx>

	* gncal-full-day.c (paint_back): Eliminated unnecessary border repainting.

Sun May 17 17:55:03 1998  Havoc Pennington  <hp@pobox.com>

	* gncal-todo.c (simple_todo_editor): Close dialog when return is pressed.

1998-05-15  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-cal.c (mark_gtk_calendar_day): Bug free version of the
	range computation in place. 
